org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/TestInterruptedStatement.java
package invalid;

public class TestInterruptedStatement {
	public void main() {
		/*]*/foo();/*[*/
	}
	
	public void foo() {
		if (true) {
			System.out.println("Eclipse");
			return;
		}	
	}
}
